feat: Implement secure AI proxy with user authentication and remove hardcoded API key; enhance UI for account settings and update deployment instructions

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -172,8 +172,10 @@
 
 
   <div class="info-box" id="quick-access-info">
-    <h3>📍 Quick Access</h3>
-    <p>Open Lovable Assistant on any Lovable.dev project page by clicking the floating button in the bottom-right corner.</p>
+    <h3>📍 Instruction</h3>
+    <p>Go to any Lovable project page and open Lovable Assistant dialog by using keyboard shortcut CTRL / CMD + K or click on the top right corner badge.</p>
+    <br><p>Open Prompt Helper Menu dialog by hitting CTRL / CMD + Enter</p>
+    <br><p>If the dialogs don't appear, please click on the Lovable's chat interface then try again.</p>
   </div>
 
 
